@@ -16,6 +16,7 @@ Application Changes:
 - Fixed incorrect behaviour for cyberware purchased via Black Market Pipeline not properly being discounted. Fixes #3244
 - Added basic functionality for the Sprite Pet from Kill Code. This is not currently restricted to the technoshaman archetype. 
 - Mildly ugly fix for cybersuites that come with cyberlimbs not properly being counted for attribute calculation.
+- Added a catch to prevent Chummer from crashing when updating if old files are still being held by other applications. Should fix #3250
 
 Data Changes:
 
